# lithos-loom

./: .gitignore  AGENTS.md  CONTEXT.md  Makefile  README.md  pyproject.toml  tests.txt
.claude/skills/regen-manual/: SKILL.md  manual-template.md
.github/workflows/: ci.yml
docs/: SPECIFICATION.md  architecture.toml  dogfooding-recent.md  result-schema.json
docs/adr/: 0001-github-watch-config-storage.md  0002-story-develop-session-mechanism.md  0003-code-quality-review-strength.context.md  0003-code-quality-review-strength.md  0004-review-only-mode.md  0005-review-correctness-eval-harness.md  0006-review-variance-measure-before-reducing.md  0007-subscription-registration-hand-wired.md  0008-story-develop-pr-access-seam.md  0009-converge-pr-loop.md
docs/agents/: triage-labels.md
docs/cli/: converge.md  project-import.md  project-regenerate-done.md  project-set-github-repo.md  review.md
docs/macros/: README.md  capture-task.md  create-project.md
docs/prd/: bulk-task-import.md  capture-macro-tag-parsing.md  full.md  github-issue-watcher.md  integration.md  mvp.md  orchestration.md  story-develop-feasibility-gate.md  story-develop.md  task-archive.md
docs/prd/archive/: story-develop.md
docs/user-manual/: manual.md
evals/review/: README.md
evals/review/cases/180-attach-delivery/: ac.md  case.toml
evals/review/cases/194-delivery-failure-status/: ac.md  case.toml  clean-change.patch  reintroduce-defect.patch
evals/review/cases/196-attach-wait-hang/: ac.md  case.toml  reintroduce-defect.patch
evals/review/cases/198-result-run-binding/: ac.md  case.toml  reintroduce-defect.patch
evals/review/cases/f001-prune-startup-reap/: ac.md  case.toml  reintroduce-defect.patch
examples/: lithos-loom.toml  story-develop-reviewers.toml
scripts/: metrics_diff.py  metrics_history.py
src/lithos_loom/: __init__.py  bus.py  config.py  cursor_store.py  doctor.py  errors.py  gates.py  github_client.py  lithos_client.py  main.py  plugin_runner.py  render.py  render_project_context.py  supervisor.py  sync_state.py  task_graph.py  task_line.py  task_line_parser.py
src/lithos_loom/children/: __init__.py  _boot.py  _echo.py  github_watcher.py  obsidian_sync.py  route_runner.py
src/lithos_loom/cli/: __init__.py  _github_metadata.py  _github_tag_migration.py  _project_import_bulk.py  converge.py  develop.py  gates.py  obsidian_sync.py  project.py  review.py  task.py
src/lithos_loom/evals/: __init__.py
src/lithos_loom/evals/review/: __init__.py  case.py  cli.py  harness.py  judge.py  match.py  patch.py  stats.py
src/lithos_loom/plugins/: __init__.py
src/lithos_loom/plugins/echo/: __init__.py  __main__.py
src/lithos_loom/plugins/prd_decompose/: __init__.py  __main__.py  prompt.md
src/lithos_loom/plugins/story_develop/: __init__.py  __main__.py  agent_session.py  autoformat.py  check_catalog.py  check_runner.py  check_set.py  config.py  containers.py  converge.py  daemon_io.py  develop.py  engines.py  findings.py  gate_adapters.py  gate_findings.py  github_access.py  handoff.py  idempotency.py  limits.py  lithos_io.py  panel.py  personas.py  pr_delivery.py  profiles.py  review_only.py  review_report.py  review_resolve.py  rounds.py  run_outcome.py  settings_resolver.py  test_gate.py  turns.py
src/lithos_loom/plugins/story_develop/prompts/: FORMAT.md  coder_fix.md  coder_init.md  converge_coder_init.md  copilot_fix.md  reviewer_rereview.md  reviewer_reseed.md  reviewer_round.md
src/lithos_loom/plugins/story_develop/prompts/personas/: architecture.md  correctness.md  dependency-hygiene.md  security.md  test-quality.md
src/lithos_loom/plugins/story_implement/: __main__.py  prompt.md
src/lithos_loom/plugins/story_review_human/: __main__.py
src/lithos_loom/runner/: __init__.py  agents.py  detection.py  git.py  worktree.py
src/lithos_loom/sources/: github_issue_watcher.py  github_watch_state.py  lithos_event_stream.py  lithos_note_stream.py  lithos_poller.py  obsidian_dir_watcher.py  obsidian_fs_watcher.py
src/lithos_loom/subscriptions/: __init__.py  _atomic_write.py  _awaiting_review.py  _blocked_snapshot.py  _develop_pr_merge.py  _findings.py  _github_issue_push.py  _github_issue_sync.py  _human_actionable.py  _noop.py  _note_conflict.py  _note_push.py  _obsidian_due_date_changed.py  _obsidian_priority_changed.py  _obsidian_projection.py  _obsidian_status_transition.py  _project_context_projection.py  _task_archive.py  retry.py  route_runner.py
tests/: conftest.py  test_awaiting_review.py  test_bus.py  test_child_boot.py  test_cli_converge.py  test_cli_develop.py  test_cli_gates.py  test_cli_obsidian_sync.py  test_cli_project.py  test_cli_project_create.py  test_cli_project_github.py  test_cli_project_import.py  test_cli_project_import_bulk.py  test_cli_project_import_seam.py  test_cli_regenerate_done.py  test_cli_review.py  test_cli_task.py  test_config.py  test_converge.py  test_cursor_store.py  test_develop_pr_merge.py  test_doctor.py  test_echo_plugin.py  test_eval_review_case.py  test_eval_review_cli.py  test_eval_review_harness.py  test_eval_review_judge.py  test_eval_review_match.py  test_eval_review_patch.py  test_eval_review_stats.py  test_fake_lithos.py  test_gates.py  test_github_client.py  test_github_issue_push.py  test_github_issue_sync.py  test_github_issue_watcher.py  test_github_watch_state_store.py  test_github_watcher_child.py  test_graph_live.py  test_human_actionable.py  (+66 more)
tests/guardrail/: AGENTS.md  _common.py  _component_pages.py  _diagram_toolkit.py  _index.py  _metrics_render.py  _metrics_toolkit.py  _private_access.py  conftest.py  test_architecture_diagram.py  test_component_pages.py  test_domain_model_diagram.py  test_generated_index.py  test_generated_manifest.py  test_layering_contract.py  test_metrics_budgets.py  test_metrics_snapshot.py  test_run_outcome_leaf.py
tests/support/: __init__.py  fake_lithos.py
