[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lithos-loom"
version = "0.1.0"
description = "Workflow orchestration daemon that turns Lithos tasks into executable work via bundled subprocess plugins."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Dave Snowdon" }]
dependencies = [
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "jsonschema>=4.21",
    "mcp>=1.27.1",
    "pyyaml>=6.0",
]

[project.scripts]
lithos-loom = "lithos_loom.main:app"

[project.entry-points."lithos_loom.subscriptions.handlers"]
noop = "lithos_loom.subscriptions._noop:handle"

[tool.hatch.build.targets.wheel]
packages = ["src/lithos_loom"]

[tool.hatch.build]
include = [
    "src/lithos_loom/plugins/*/prompt.md",
    "src/lithos_loom/plugins/*/prompts/*.md",
    "docs/result-schema.json",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pyright>=1.1",
    "ruff>=0.4",
    "respx>=0.21",
    "types-pyyaml>=6.0",
]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
# Project-wide flake8-bandit (``S``) exemptions, each a deliberate pattern in loom:
#   S101  ``assert`` is used only for internal invariants / type-narrowing (e.g.
#         ``assert x is not None`` guaranteed by prior code), never for input
#         validation — which uses explicit raises. Idiomatic in typed Python.
#   S603  loom's subprocess calls are list-form, never ``shell=True`` (S603 flags
#         the *safe* pattern).
#   S607  loom invokes docker/git/gh by name on the operator's PATH by design —
#         absolute paths are non-portable (the host must have them; see AGENTS.md).
ignore = ["S101", "S603", "S607"]

[tool.ruff.lint.per-file-ignores]
# Typer's idiomatic style uses ``typer.Option(...)`` / ``typer.Argument(...)`` in
# default-argument position; B008 ("function call in default argument") is a
# known false positive for Typer code.
"src/lithos_loom/main.py" = ["B008"]
"src/lithos_loom/cli/**.py" = ["B008"]
"src/lithos_loom/plugins/**/__main__.py" = ["B008"]
# Tests legitimately use fixture credentials (S105/S106) and temp paths (S108);
# (S101 ``assert`` is exempt project-wide above — and is the test idiom anyway).
"tests/**" = ["S105", "S106", "S108"]
# Deliberate best-effort teardown of already-dead MCP/SSE contexts via
# ``except* Exception: pass`` (exception groups, so ``contextlib.suppress`` can't
# express it); the swallow is documented at each site (``_teardown_quietly`` /
# ``_cleanup_partial_connect``).
"src/lithos_loom/lithos_client.py" = ["S110"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
