[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lithos-loom"
version = "0.1.0"
description = "Workflow orchestration daemon that turns Lithos tasks into executable work via bundled subprocess plugins."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Dave Snowdon" }]
dependencies = [
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "jsonschema>=4.21",
    "mcp>=1.27.1",
    "pyyaml>=6.0",
]

[project.scripts]
lithos-loom = "lithos_loom.main:app"

[project.entry-points."lithos_loom.subscriptions.handlers"]
noop = "lithos_loom.subscriptions._noop:handle"

[tool.hatch.build.targets.wheel]
packages = ["src/lithos_loom"]

[tool.hatch.build]
include = [
    "src/lithos_loom/plugins/*/prompt.md",
    "src/lithos_loom/plugins/*/prompts/*.md",
    "docs/result-schema.json",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pyright>=1.1",
    "ruff>=0.4",
    "respx>=0.21",
    "types-pyyaml>=6.0",
    # `coverage` is venv-resident (it executes the test suite against project code),
    # so the `thorough` profile's coverage check (`uv run coverage run -m pytest &&
    # uv run coverage report`) needs it in the project env — a bare image-global
    # `coverage` can't import the project's deps. The `[toml]` extra lets it read the
    # `[tool.coverage]` config below from pyproject.
    "coverage[toml]>=7.0",
    "grimp>=3.14",
    "import-linter>=2.12",
]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
# Project-wide flake8-bandit (``S``) exemptions, each a deliberate pattern in loom:
#   S101  ``assert`` is used only for internal invariants / type-narrowing (e.g.
#         ``assert x is not None`` guaranteed by prior code), never for input
#         validation — which uses explicit raises. Idiomatic in typed Python.
#   S603  loom's subprocess calls are list-form, never ``shell=True`` (S603 flags
#         the *safe* pattern).
#   S607  loom invokes docker/git/gh by name on the operator's PATH by design —
#         absolute paths are non-portable (the host must have them; see AGENTS.md).
ignore = ["S101", "S603", "S607"]

[tool.ruff.lint.per-file-ignores]
# Typer's idiomatic style uses ``typer.Option(...)`` / ``typer.Argument(...)`` in
# default-argument position; B008 ("function call in default argument") is a
# known false positive for Typer code.
"src/lithos_loom/main.py" = ["B008"]
"src/lithos_loom/cli/**.py" = ["B008"]
"src/lithos_loom/evals/**/cli.py" = ["B008"]
"src/lithos_loom/plugins/**/__main__.py" = ["B008"]
# Tests legitimately use fixture credentials (S105/S106) and temp paths (S108);
# (S101 ``assert`` is exempt project-wide above — and is the test idiom anyway).
"tests/**" = ["S105", "S106", "S108"]
# Deliberate best-effort teardown of already-dead MCP/SSE contexts via
# ``except* Exception: pass`` (exception groups, so ``contextlib.suppress`` can't
# express it); the swallow is documented at each site (``_teardown_quietly`` /
# ``_cleanup_partial_connect``).
"src/lithos_loom/lithos_client.py" = ["S110"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"

[tool.importlinter]
# Directional architecture contract: dependencies must only point downward,
# Entrypoints -> Core -> Foundation. Expressed as `forbidden` contracts (not
# `layers`) because some core modules legitimately import siblings (e.g.
# render <-> subscriptions), which a strict layers contract would reject.
root_package = "lithos_loom"

[[tool.importlinter.contracts]]
name = "Foundation must not import Core or Entrypoints"
type = "forbidden"
source_modules = [
    "lithos_loom.bus",
    "lithos_loom.config",
    "lithos_loom.errors",
    "lithos_loom.lithos_client",
    "lithos_loom.github_client",
    "lithos_loom.task_graph",
    "lithos_loom.task_line_parser",
    "lithos_loom.cursor_store",
    "lithos_loom.sync_state",
    "lithos_loom.runner",
    "lithos_loom.plugin_runner",
    "lithos_loom.supervisor",
    "lithos_loom.render_project_context",
]
forbidden_modules = [
    "lithos_loom.cli",
    "lithos_loom.plugins",
    "lithos_loom.subscriptions",
    "lithos_loom.sources",
    "lithos_loom.render",
    "lithos_loom.doctor",
    "lithos_loom.evals",
    "lithos_loom.main",
    "lithos_loom.__main__",
    "lithos_loom.children",
]

[[tool.importlinter.contracts]]
name = "Core must not import Entrypoints"
type = "forbidden"
source_modules = [
    "lithos_loom.cli",
    "lithos_loom.plugins",
    "lithos_loom.subscriptions",
    "lithos_loom.sources",
    "lithos_loom.render",
    "lithos_loom.doctor",
    "lithos_loom.evals",
]
forbidden_modules = [
    "lithos_loom.main",
    "lithos_loom.__main__",
    "lithos_loom.children",
]

[[tool.importlinter.contracts]]
# run_outcome owns the develop-run on-disk contract (state.json / result.json /
# delivery.json) and is imported by BOTH the reader (cli/develop.py) and, later,
# the writer side. Keep it a leaf: stdlib + `.idempotency` only. If it grew an
# import of the plugin runtime (develop/pr_delivery/containers/…) or the config /
# client stack, cli/develop.py would drag that whole graph in just to classify a
# run — the coupling the extraction removed.
#
# This contract is the DENYLIST half of the guard: it forbids the known heavy
# runtime/config/client modules, and (import-linter checks chains) catches an
# INDIRECT path too — e.g. if `.idempotency` itself grew a develop import. The
# literal "stdlib + .idempotency only" property on run_outcome's OWN imports is
# enforced directly by tests/guardrail/test_run_outcome_leaf.py — a denylist
# alone can't, since it can't name every module a future edit might reach for.
name = "run_outcome stays a lightweight on-disk contract module"
type = "forbidden"
source_modules = [
    "lithos_loom.plugins.story_develop.run_outcome",
]
forbidden_modules = [
    "lithos_loom.cli",
    "lithos_loom.plugins.story_develop.develop",
    "lithos_loom.plugins.story_develop.daemon_io",
    "lithos_loom.plugins.story_develop.pr_delivery",
    "lithos_loom.plugins.story_develop.containers",
    "lithos_loom.plugins.story_develop.turns",
    "lithos_loom.plugins.story_develop.lithos_io",
    "lithos_loom.config",
    "lithos_loom.lithos_client",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
# Measure the package, not the tests; the `thorough` coverage check runs
# `coverage run -m pytest && coverage report`.
source = ["src/lithos_loom"]

[tool.coverage.report]
# Conservative floor below the measured baseline (90% at time of writing) so the
# gate is a real threshold without spuriously blocking on small dips. Raise
# deliberately over time.
fail_under = 85
show_missing = false
